# mom_ner

./: create_jsonl.ipynb  json_annotate_7-21.jsonl  lang_detect_mschloegl.ipynb  language_regesten_8-21.csv  nlp_mom.ipynb  pyproject.toml  readme.md
DH2024-Experiment/: readme.md
DH2024-Experiment/Dataset-Preparation/: BIO-Tag-Splitting.py  Combining-Two-Datasets.py  Training-Validation-Testing-Spliting.py
DH2024-Experiment/Models-Testing/: Testing-Models.py
DH2024-Experiment/Models-Testing/Testing-Data/: loc-final-testing-data.conll  org-final-testing-data.conll  pers-final-testing-data.conll
DH2024-Experiment/Original-Annotated-Datasets-by-Varvara-Arzt/: readme.md
DH2024-Experiment/Trained-Models/: readme.md
DH2024-Experiment/Trained-Models/LOC-Model/: config.cfg  meta.json
DH2024-Experiment/Trained-Models/LOC-Model/ner/: model  moves
DH2024-Experiment/Trained-Models/LOC-Model/vocab/: strings.json
DH2024-Experiment/Trained-Models/ORG-Model/: config.cfg  meta.json
DH2024-Experiment/Trained-Models/ORG-Model/ner/: model  moves
DH2024-Experiment/Trained-Models/ORG-Model/vocab/: strings.json
DH2024-Experiment/Trained-Models/PERS-Model/: config.cfg  meta.json
data/annotations/: monner1.jsonl
models/: meta_monner_tok2vec_20210823.json  meta_monner_transformer_20210823.json
models/model-ner_spacy_varvara_20210804/: config.cfg  meta.json
models/model-ner_spacy_varvara_20210804/ner/: model  moves
models/model-ner_spacy_varvara_20210804/vocab/: strings.json
src/: prepare_data.py  readme.md  usage_example_ner_model.ipynb
(+11441 files in other folders)
