[tool.poetry]
name = "mon_ner"
version = "0.1.0"
description = ""
authors = ["Matthias Schlögl <matthias.schloegl@oeaw.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
spacy = "^3.1.1"
langdetect = "^1.0.9"
parsel = "^1.6.0"
lxml = "^4.6.3"
jupyter = "^1.0.0"
langid = "^1.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
